--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -52,7 +52,7 @@ body{
 }
 
 .container {
-  width: 1230px;
+  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto; 
@@ -68,7 +68,7 @@ body{
 .header {
     padding-top: 24px;
     padding-bottom: 25px;
-    border: 1px solid #ECECEC;
+    border-bottom: 1px solid #ECECEC;
 }
 
 .header-container{
@@ -123,6 +123,8 @@ body{
 .hero {
     background-color: #2F303A;
     text-align: center;
+    padding-top: 200px;
+    padding-bottom: 200px;
 }
 
 .hero-title {
@@ -172,6 +174,7 @@ body{
 }
 
 .benefits-item-title {
+    font-size: 14px;
     margin-bottom: 10px;
     font-weight:700;
     line-height: 1.14;
@@ -183,7 +186,9 @@ body{
 }
 
 /*-------------------------Work-------------------*/
-.work {}
+.work {
+    padding-top: 0;
+}
 
 .work-title {
     margin-bottom: 50px;
@@ -209,7 +214,6 @@ body{
 }
 
 .team-img{
-    margin-bottom: 30px;
 }
 
 .team-title {
@@ -224,6 +228,11 @@ body{
 .team-list {
     display: flex;
     gap: 30px;
+}
+
+.team-border{
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .team-item {
@@ -245,7 +254,6 @@ body{
 }
 
 .team-item-uptitle {
-    margin-bottom: 30px;
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
@@ -255,15 +263,17 @@ body{
 
 .contacts-container{
     display: block;
-    padding-top: 60px;
 }
 
 .contacts {
     background-color: #2F303A;
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 .logo-contacts{
     color: var(--color-white);
+    margin-bottom: 20px;
 }
 
 .contacts-adress {
@@ -271,14 +281,15 @@ body{
 }
 
 .contacts-list {
-    margin-top: 20px;
-    padding-bottom: 60px;
 }
 
 .contacts-item {
     margin-bottom: 9px;
 }
 
+.contacts-item: :last-child{
+   margin-bottom:0 
+}
 .contacts-link:hover,
 .contacts-link:focus{
     color: var(--color-blue);
@@ -299,17 +310,15 @@ body{
     display: block;
 }
 
-.examples-container{
-}
 
-.examples-container .examples-list{
+.examples-container{
     display: flex;
     gap: 8px;
     justify-content: center;
     margin-bottom: 50px;
 }
 
-.examples-photo .examples-list{
+.examples-photo{
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
@@ -326,7 +335,6 @@ body{
     display: flex;
     padding: 6px 22px;
     border-radius: 4px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border: 1px solid transparent;
     font-family: inherit;
     font-weight: 500;
@@ -338,17 +346,18 @@ body{
 }
 
 .examples-item{
-    width: 370px;
-    border: 1px solid #EEEEEE;
-    background: #FFFFFF;
+    flex-basis: 370px;
 }
 
 .examples-img{
-    margin-bottom: 20px;
 }
 
 .examples-text{
-    margin: 20px 24px;
+    padding: 20px 24px;
+    border-left: 1px solid #EEEEEE;
+    border-right: 1px solid #EEEEEE;
+    border-bottom:1px solid #EEEEEE ;
+
 }
 
 .examples-title {
